--- a/pt/index.html
+++ b/pt/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="header">
   <h1>
-    STK Latam
+    STK LATAM
   </h1>
     <br />
     <p style="text-align: center">
@@ -22,7 +22,7 @@
       Boas-vindas!
     </h2>
     <p>Nossos servidores de <a href="https://www.supertuxkart.net">SuperTuxKart</a> são abertos a todos,
-    principalmente os jogadores das Américas.
+    principalmente aos jogadores das Américas.
     </p>
     <p>Clique <a href="records">aqui</a> para visualizar os recordes. ;)</p>
     <hr></hr>
