Initial location query support

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="header">
   <h1>
-    STK Latam
+    STK Latinoamérica ⭐️ STK LATAM 
   </h1>
     <br />
     <p style="text-align: center">
