Better form persistance, updated track snapshots and support for featured and well rated addon tracks lists

--- a/es/index.html
+++ b/es/index.html
@@ -79,7 +79,7 @@
      <ul>
        <li>fodoman</li>
        <li>FPSensor</li>
-       <li>TheGastonix09LolXD</li>
+       <li>Tonix009_STK</li>
        <li>UnsolvedCypher</li>
      </ul>
      <hr>
