--- a/pt/index.html
+++ b/pt/index.html
@@ -77,7 +77,7 @@
      <ul>
        <li>fodoman</li>
        <li>G.Kart</li>
-       <li>TheGastonix09LolXD</li>
+       <li>Tonix009_STK</li>
        <li>UnsolvedCypher</li>
      </ul>
      <hr>
